src/vs/workbench/contrib/extensions/browser/media/extensionEditor.css
/* ... */
.extension-editor > .header > .icon-container .extension-icon-badge .codicon {
	color: currentColor;
	font-size: 28px;
}

.extension-editor > .header > .details {
	padding-left: 12px;
	overflow: hidden;
	user-select: text;
	-webkit-user-select: text;
}

.extension-editor > .header > .details > .title {
	display: flex;
	align-items: center;
}

.extension-editor > .header > .details > .title > .name {
	flex: 0;
	font-size: 26px;
	line-height: 30px;
	font-weight: 600;
	white-space: nowrap;
}

.extension-editor > .header > .details > .title > .name.deprecated {
	text-decoration: line-through;
}

.extension-editor > .header > .details > .title > .version {
	margin-left: 10px;
	user-select: text;
	-webkit-user-select: text;
	white-space: nowrap;
}

.extension-editor > .header > .details > .title > .builtin {
	font-size: 10px;
	font-style: italic;
	margin-left: 10px;
}

.extension-editor > .header > .details > .title > .pre-release {
	margin-left: 10px;
	padding: 0px 4px;
	border-radius: 4px;
	background-color: var(--vscode-extensionIcon-preReleaseForeground);
	color: #ffffff;
	display: flex;
	align-items: center;
}

.extension-editor > .header > .details > .title > .pre-release > .codicon.codicon-extensions-pre-release {
	color: #ffffff;
	font-size: 14px;
}

.extension-editor > .header > .details > .title > .pre-release > .pre-release-text {
	font-size: 10px;
	padding-left: 3px;
}

.monaco-workbench.vs .extension-editor > .header > .details > .title > .preview {
	color: white;
}

.extension-editor > .header > .details > .title > .preview {
	background: rgb(214, 63, 38);
	font-size: 10px;
	font-style: italic;
	margin-left: 10px;
	padding: 0px 4px;
	border-radius: 4px;
	user-select: none;
	-webkit-user-select: none;
}

.extension-editor > .header > .details > .subtitle {
	padding-top: 6px;
	white-space: nowrap;
	height: 20px;
	line-height: 20px;
}

.extension-editor > .header > .details > .subtitle .hide {
	display: none;
}

.extension-editor > .header > .details > .subtitle .publisher {
	display: flex;
	align-items: center;
}

.extension-editor > .header > .details > .subtitle .publisher .verified-publisher:not(:empty) {
	margin-left: 4px;
}

.extension-editor > .header > .details > .subtitle,
.extension-editor > .header > .details > .subtitle .extension-kind-indicator,
.extension-editor > .header > .details > .subtitle .install,
.extension-editor > .header > .details > .subtitle .rating,
.extension-editor > .header > .details > .subtitle .license,
.extension-editor > .header > .details > .subtitle .sponsor {
	display: flex;
	align-items: center;
}

.extension-editor > .header > .details > .subtitle .sponsor .codicon {
	padding-right: 3px;
}

.extension-editor > .header > .details > .subtitle .install > .count {
	margin-left: 6px;
}

.extension-editor > .header > .details > .subtitle .extension-kind-indicator > .codicon {
	margin-right: 6px;
}

.extension-editor > .header > .details > .subtitle > .subtitle-entry:not(:empty):not(.last-non-empty) {
	border-right: 1px solid rgba(128, 128, 128, 0.7);
	margin-right: 14px;
	padding-right: 14px;
}

.extension-editor > .header > .details > .description {
	margin-top: 10px;
	white-space: nowrap;
	text-overflow: ellipsis;
	overflow: hidden;
}

.extension-editor > .header > .details > .actions-status-container {
	margin-top: 10px;
	display: flex;
}

.extension-editor > .header > .details > .actions-status-container.list-layout {
	display: inherit;
}

.extension-editor > .header > .details > .actions-status-container > .monaco-action-bar {
	text-align: initial;
}

.extension-editor > .header > .details > .actions-status-container > .monaco-action-bar > .actions-container > .action-item {
	margin-right: 0;
	overflow: hidden;
	flex-shrink: 0;
}

.extension-editor > .header > .details > .actions-status-container > .monaco-action-bar > .actions-container > .action-item.disabled {
	min-width: 0;
}

.extension-editor > .header > .details > .actions-status-container > .monaco-action-bar > .actions-container > .action-item .extension-action {
	margin-bottom: 2px;
	/* margin for outline */
}

.extension-editor > .header > .details > .actions-status-container > .monaco-action-bar > .actions-container > .action-item > .extension-action:not(.icon) {
	margin-left: 2px;
	/* margin for outline */
}

.extension-editor > .header > .details > .actions-status-container > .monaco-action-bar > .actions-container > .action-item.action-dropdown-item > .monaco-dropdown .extension-action.action-dropdown {
	margin-right: 2px;
	/* margin for outline */
}

.extension-editor > .header > .details > .actions-status-container > .monaco-action-bar > .actions-container > .action-item:not(.checkbox-action-item) .extension-action:not(.icon) {
	padding-top: 0;
	padding-bottom: 0;
}

.extension-editor > .header > .details > .actions-status-container > .monaco-action-bar > .actions-container > .action-item > .extension-action,
.extension-editor > .header > .details > .actions-status-container > .monaco-action-bar > .actions-container > .action-item.action-dropdown-item > .monaco-dropdown .extension-action.action-dropdown {
	line-height: 22px;
}

.extension-editor > .header > .details > .actions-status-container > .monaco-action-bar > .actions-container > .action-item.action-dropdown-item,
.extension-editor > .header > .details > .actions-status-container > .monaco-action-bar > .actions-container > .action-item.checkbox-action-item,
.extension-editor > .header > .details > .actions-status-container > .monaco-action-bar > .actions-container > .action-item:not(.action-dropdown-item):not(.checkbox-action-item) > .extension-action {
	margin-right: 6px;
}

.extension-editor > .header > .details > .actions-status-container > .monaco-action-bar > .actions-container > .action-item.checkbox-action-item > .extension-action {
	height: 18px;
	width: 18px;
	margin-top: 2px;
}
/* ... */

